--- a/client/package.json
+++ b/client/package.json
@@ -21,9 +21,11 @@
     "@angular/platform-browser-dynamic": "^18.2.0",
     "@angular/router": "^18.2.0",
     "@fortawesome/fontawesome-free": "^6.7.2",
+    "@nestjs/platform-express": "^11.0.11",
     "@ngrx/store": "^18.1.1",
     "@primeng/themes": "^19.0.6",
     "font-awesome": "^4.7.0",
+    "multer": "^1.4.5-lts.1",
     "primeflex": "^4.0.0",
     "primeicons": "^7.0.0",
     "primeng": "^17.18.11",
