--- a/api/package.json
+++ b/api/package.json
@@ -30,6 +30,7 @@
     "@nestjs/swagger": "^11.0.3",
     "@sendgrid/mail": "^8.1.4",
     "@types/passport-jwt": "^4.0.1",
+    "axios": "^1.8.3",
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
