--- a/client/package.json
+++ b/client/package.json
@@ -10,7 +10,7 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^18.2.0",
+    "@angular/animations": "^18.2.13",
     "@angular/cdk": "^18.2.14",
     "@angular/common": "^18.2.0",
     "@angular/compiler": "^18.2.13",
@@ -25,7 +25,10 @@
     "@ngrx/store": "^18.1.1",
     "@primeng/themes": "^19.0.6",
     "font-awesome": "^4.7.0",
+    "lottie-web": "^5.12.2",
     "multer": "^1.4.5-lts.1",
+    "ng-lottie": "^0.3.2",
+    "ngx-lottie": "^13.0.1",
     "primeflex": "^4.0.0",
     "primeicons": "^7.0.0",
     "primeng": "^17.18.11",
