--- a/api/package.json
+++ b/api/package.json
@@ -27,7 +27,9 @@
     "@nestjs/mongoose": "^11.0.1",
     "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^11.0.11",
+    "@nestjs/platform-socket.io": "^11.0.12",
     "@nestjs/swagger": "^11.0.3",
+    "@nestjs/websockets": "^11.0.12",
     "@sendgrid/mail": "^8.1.4",
     "@types/passport-jwt": "^4.0.1",
     "axios": "^1.8.3",
@@ -36,11 +38,13 @@
     "class-validator": "^0.14.1",
     "mongoose": "^8.9.6",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.10.0",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
+    "socket.io": "^4.8.1",
     "swagger-ui-express": "^5.0.1"
   },
   "devDependencies": {
