--- a/client/package.json
+++ b/client/package.json
@@ -29,6 +29,7 @@
     "multer": "^1.4.5-lts.1",
     "ng-lottie": "^0.3.2",
     "ngx-lottie": "^13.0.1",
+    "ngx-socket-io": "^4.8.4",
     "primeflex": "^4.0.0",
     "primeicons": "^7.0.0",
     "primeng": "^17.18.11",
