--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,7 @@
     "@nestjs/platform-express": "^11.0.11",
     "@ngrx/store": "^18.1.1",
     "@primeng/themes": "^19.0.6",
+    "chart.js": "^4.4.8",
     "font-awesome": "^4.7.0",
     "lottie-web": "^5.12.2",
     "multer": "^1.4.5-lts.1",
